[gd_scene load_steps=4 format=3 uid="uid://bqeutb2b410we"]

[ext_resource type="Texture2D" uid="uid://b7if6mbqtdrqt" path="res://icon.svg" id="1_32ew7"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_386qq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pxxql"]
radius = 32.0
height = 162.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_386qq")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, -12)
scale = Vector2(0.414062, 1.28125)
texture = ExtResource("1_32ew7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, -13)
shape = SubResource("CapsuleShape2D_pxxql")

[node name="PauseTimer" type="Timer" parent="."]

[node name="RewindTimer" type="Timer" parent="."]

[node name="FastForwardTimer" type="Timer" parent="."]
